2006-05-04 Sandro Santilli <strk@refractions.net>

	* source/headers/geos/operation/buffer/OffsetCurveSetBuilder.h:
	doxygen comments.
	* headers/geos/geom/CoordinateSequence.h: added
	comment about the toVector() method.
	* source/noding/SegmentNodeList.cpp: cleanups,
	changed output operator to be more similar to JTS
	* source/noding/ScaledNoder.cpp: removed use
	of SegmentString::setCoordinates().
	* source/headers/geos/noding/SegmentStrign.{h,inl}:
	removed new setCoordinates() interface.
	* source/headers/geos/noding/SegmentNodeList.h:
	const-correct size() method.
	* source/headers/geos/noding/SegmentString.h,
	source/noding/SegmentString.cpp: output operator. 


2006-05-03 Howard Butler <hobu@hobu.net>

	* source/headers/version.h.vc: Maintain a version.h.vc 
	until we come up with a better solution
	* source/makefile.vc: Add missing stuff

2006-05-03 Sandro Santilli <strk@refractions.net>

	* source/geom/CoordinateSequence.cpp,
	source/headers/geos/geom/CoordinateSequence.h:
	added operator<< for CoordinateSequence
	* source/headers/geos/noding/snapround/HotPixel.h: doxygen
	comments.
	* source/headers/geos/nodingSnapround.h: doxygen brief
	* source/noding/snapround/SimpleSnapRounder.cpp: fixed
	bug in computeSnaps, trying to access out-of-bound vector
	element.
	* configure.in: updated JTS_PORT to 1.7.1
	* source/headers/geos/noding/SegmentString.{h,inl}:
	testInvariant() moved from private to public access
	level, and ensured to be inlined; added setCoordinates()
	interface
	* source/headers/geos/noding/snapround/HotPixel.inl:
	changed sym_round() to java_math_round()
	* source/operation/buffer/RightmostEdgeFinder.cpp: more
	assertion checking
	* source/operation/buffer/BufferOp.cpp: fixed
	misuse of MCIndexNoder in bufferFixedPrecision.
	* source/headers/geos/geom/CoordinateSequence.h,
	source/headers/geos/geom/CoordinateArraySequence.h,
	source/geom/CoordinateArraySequence.cpp: added new
	non-static removeRepeatedPoints() mutator.